# evolutionary-optimization-framework

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  tsconfig.base.json
apps/dashboard/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/messages/: en.json  es.json
apps/dashboard/prisma/: schema.prisma
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/app/[locale]/: layout.tsx  page.tsx
apps/dashboard/src/components/: ThemeProvider.tsx
apps/dashboard/src/i18n/: request.ts  routing.ts
apps/dashboard/src/lib/: env.ts
docker/: engine.Dockerfile  web.Dockerfile
docs/: 01_project-setup.md  02_architecture-overview.md
engine/: .env.example  README.md  pyproject.toml  ruff.toml
engine/src/api/: app.py
engine/src/config/: settings.py
engine/src/domain/: schemas.py
engine/tests/: test_health.py
